--- a/api/package.json
+++ b/api/package.json
@@ -19,12 +19,17 @@
   "author": "Sanjog Rijal",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "mongoose": "^6.1.7",
     "ts-node": "^10.4.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
     "@types/node": "^17.0.10",
+    "body-parser": "^1.19.1",
     "ts-node-dev": "^1.1.8",
     "tslint": "^6.1.3",
     "typescript": "^4.5.4"
